--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,8 @@ jobs:
           MYSQL_DATABASE: todo_list
         ports:
           - 3306:3306
-        options: > 
-          --health-cmd="mysqladmin ping -h localhost" 
-          --health-interval=10s 
-          --health-timeout=5s 
-          --health-retries=3
+        options: "--health-cmd='mysqladmin ping -h localhost' --health-interval=10s --health-timeout=5s --health-retries=3"
+
 
     steps:
     - uses: actions/checkout@v3
