--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,6 @@ jobs:
     - name: Build and test frontend
       run: |
         cd todo-frontend
-        npm install --prefer-offline --no-audit
+        npm ci
         npm run build
         npm test
