--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -45,5 +45,8 @@
     "moduleNameMapper": {
       "^axios$": "axios/dist/node/axios.cjs"
     }
+  },
+  "devDependencies": {
+    "typescript": "^5.7.2"
   }
 }
