--- a/todo-backend/src/main/resources/application.yaml
+++ b/todo-backend/src/main/resources/application.yaml
@@ -3,9 +3,9 @@ spring:
     name: todo-backend
 
   datasource:
-    url: jdbc:mysql://localhost:3306/todo_list?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    username: root
-    password: '0'
+    url: jdbc:${DB_URL}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
