--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,13 +47,6 @@ jobs:
         SPRING_DATASOURCE_USERNAME: root
         SPRING_DATASOURCE_PASSWORD: '0'
 
-    - name: Wait for MySQL to be ready
-      run: |
-        while ! mysqladmin ping -h"localhost" --silent; do
-          echo "Waiting for MySQL to be ready..."
-          sleep 2
-        done
-
     - name: Cache Node.js modules
       uses: actions/cache@v4
       with:
@@ -73,21 +66,16 @@ jobs:
         npm install
         npm run build
         npm test
-
-    - name: Ensure todo-frontend directory exists
-      run: mkdir -p todo-frontend
-
     - name: Replace .env variables in frontend
       run: |
-        echo "BASE_API=${{ secrets.BASE_API }}" > todo-frontend/.env
+        cd todo-frontend
+        echo "BASE_API=${{ secrets.BASE_API }}" > .env
       working-directory: todo-frontend
-
-    - name: Ensure todo-backend directory exists
-      run: mkdir -p todo-backend
 
     - name: Replace .env variables in backend
       run: |
-        echo "DB_URL=${{ secrets.DB_URL }}" > todo-backend/.env
-        echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> todo-backend/.env
-        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> todo-backend/.env
+        cd todo-backend
+        echo "DB_URL=${{ secrets.DB_URL }}" > .env
+        echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
+        echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
       working-directory: todo-backend
