--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,7 +91,7 @@ jobs:
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
         vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-        vercel-project-name: todo-list
+        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
         working-directory: ./todo-frontend
       env:
         REACT_APP_BASE_API: ${{ secrets.REACT_APP_BASE_API }}
