--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: Build and test
 
 on:
   push:
@@ -66,23 +66,14 @@ jobs:
         npm install
         npm run build
         npm test
-
-  deploy:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Deploy Backend to Heroku
-      uses: akhileshns/heroku-deploy@v3.13.15
+  
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
       with:
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-        heroku_app_name: "todo-backend-thanh2k4"
-        heroku_email: "nvthanh12102004@gmail.com"
-        appdir: "todo-backend"
-      env:
-        DB_URL: ${{ secrets.DB_URL }}
-        DB_USERNAME : ${{ secrets.DB_USERNAME }}
-        DB_PASSWORD : ${{ secrets.DB_PASSWORD }}
+        name: build-artifacts
+        path: |
+          todo-backend/target/*.jar
+          todo-frontend/build/**
+
+
 
