split build-test and deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   workflow_run:
-    workflows: ["Build and Test"]
+    workflows: ["build-and-test"]
     types:
       - completed
 
@@ -17,6 +17,17 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: build-artifacts
+
+    - name: Deploy to Docker
+      run: |
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker build -t todo-app-backend:latest ./todo-backend
+        docker build -t todo-app-frontend:latest ./todo-frontend
+        docker tag todo-app-backend:latest ${{ secrets.DOCKER_USERNAME }}/todo-app-backend:latest
+        docker tag todo-app-frontend:latest ${{ secrets.DOCKER_USERNAME }}/todo-app-frontend:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/todo-app-backend:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/todo-app-frontend:latest
+
 
     - name: Deploy Backend to Heroku
       uses: akhileshns/heroku-deploy@v3.13.15
