--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Set up Docker Compose
       run: |
         sudo apt-get update
+        sudo apt-get install -y docker.io
         sudo apt-get install -y docker-compose  
 
     - name: Deploy to Docker
