--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,19 +19,30 @@ jobs:
         workflow: build-test.yml
         name: build-artifacts
 
+    - name: Download change type
+      uses: dawidd6/action-download-artifact@v7
+      with:
+        workflow: build-test.yml
+        name: change-type
+
+    - name: Read change type
+      id: change-type
+      run: echo "change_type=$(cat change-type.txt)" >> $GITHUB_OUTPUT
+
     - name: Set up Docker Compose
       run: |
         sudo apt-get update
-        sudo apt-get install -y docker.io
         sudo apt-get install -y docker-compose  
 
-    - name: Deploy to Docker
+    - name: Deploy to Docker (Init or Feature)
+      if: steps.change-type.outputs.change_type == 'init' || steps.change-type.outputs.change_type == 'feature'
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker-compose -f docker-compose.yml build
         docker-compose -f docker-compose.yml push
 
-    - name: Deploy Backend to Heroku
+    - name: Deploy Backend to Heroku (Init or Feature)
+      if: steps.change-type.outputs.change_type == 'init' || steps.change-type.outputs.change_type == 'feature'
       uses: akhileshns/heroku-deploy@v3.13.15
       with:
         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
@@ -42,3 +53,30 @@ jobs:
         DB_URL: ${{ secrets.DB_URL }}
         DB_USERNAME: ${{ secrets.DB_USERNAME }}
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
+    - name: Update Dependencies (Dependency change)
+      if: steps.change-type.outputs.change_type == 'dependency'
+      run: |
+        cd todo-backend
+        mvn versions:use-latest-versions
+        cd ../todo-frontend
+        npm update
+
+    - name: Deploy Backend to Heroku (Dependency change)
+      if: steps.change-type.outputs.change_type == 'dependency'
+      uses: akhileshns/heroku-deploy@v3.13.15
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_app_name: "todo-backend-thanh2k4"
+        heroku_email: "nvthanh12102004@gmail.com"
+        appdir: "todo-backend"
+        justlogin: true
+      env:
+        DB_URL: ${{ secrets.DB_URL }}
+        DB_USERNAME: ${{ secrets.DB_USERNAME }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
+    - name: Notify for Other Changes
+      if: steps.change-type.outputs.change_type == 'other'
+      run: echo "No specific deployment action for this change type. Please review manually."
+
