--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Set up Docker Compose
       run: |
         sudo apt-get update
+        sudo apt remove containerd
         sudo apt-get install -y docker-compose  
 
     - name: Deploy to Docker (Init or Feature)
