--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt remove containerd
+        sudo apt remove containerd.io
         sudo apt-get install -y docker-compose  
 
     - name: Deploy to Docker (Init or Feature)
