--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,7 @@ on:
   workflow_run:
     workflows: ["Build and test"]
     types:
-      - completed && success
-
+      - success
 jobs:
   deploy:
     runs-on: ubuntu-latest
