--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,91 @@
-name: Deploy
+name: CI Pipeline
 
 on:
-  workflow_run:
-    workflows: ["Build and test"]
-    types:
-      - success
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
+  # Build and test the backend and frontend
+  build-and-test:
+    runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: '0'
+          MYSQL_DATABASE: todo_list
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Cache Maven dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'adopt'
+
+    - name: Build and test backend
+      run: |
+        cd todo-backend
+        mvn clean install
+        mvn test
+      env:
+        SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/todo_list?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+        SPRING_DATASOURCE_USERNAME: root
+        SPRING_DATASOURCE_PASSWORD: '0'
+
+    - name: Cache Node.js modules
+      uses: actions/cache@v4
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/todo-frontend/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+
+    - name: Build and test frontend
+      run: |
+        cd todo-frontend
+        npm install
+        npm run build
+        npm test
+
+  # Deploy 
   deploy:
+    needs: build-and-test
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Download build artifacts
-      uses: dawidd6/action-download-artifact@v7
-      with:
-        workflow: build-test.yml
-        name: build-artifacts
-
-    - name: Download change type
-      uses: dawidd6/action-download-artifact@v7
-      with:
-        workflow: build-test.yml
-        name: change-type
-
-    - name: Read change type
-      id: change-type
-      run: echo "change_type=$(cat change-type.txt)" >> $GITHUB_OUTPUT
-
     - name: Set up Docker Compose
       run: |
         sudo apt-get update
-        sudo apt-get install -y docker-compose  
+        sudo apt-get install -y docker-compose
 
     - name: Deploy to Docker (Init or Feature)
-      if: steps.change-type.outputs.change_type == 'init' || steps.change-type.outputs.change_type == 'feature'
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker-compose -f docker-compose.yml build
         docker-compose -f docker-compose.yml push
 
-    - name: Deploy Backend to Heroku (Init or Feature)
-      if: steps.change-type.outputs.change_type == 'init' || steps.change-type.outputs.change_type == 'feature'
+    - name: Deploy Backend to Heroku
       uses: akhileshns/heroku-deploy@v3.13.15
       with:
         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
@@ -50,29 +94,5 @@ jobs:
         appdir: "todo-backend"
       env:
         DB_URL: ${{ secrets.DB_URL }}
-        DB_USERNAME: ${{ secrets.DB_USERNAME }}
-        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-
-    - name: Update Dependencies (Dependency change)
-      if: steps.change-type.outputs.change_type == 'dependency'
-      run: |
-        cd todo-backend
-        mvn versions:use-latest-versions
-
-    - name: Deploy Backend to Heroku (Dependency change)
-      if: steps.change-type.outputs.change_type == 'dependency'
-      uses: akhileshns/heroku-deploy@v3.13.15
-      with:
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-        heroku_app_name: "todo-backend-thanh2k4"
-        heroku_email: "nvthanh12102004@gmail.com"
-        appdir: "todo-backend"
-        justlogin: true
-      env:
-        DB_URL: ${{ secrets.DB_URL }}
-        DB_USERNAME: ${{ secrets.DB_USERNAME }}
-        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-
-    - name: Notify for Other Changes
-      if: steps.change-type.outputs.change_type == 'other'
-      run: echo "No specific deployment action for this change type. Please review manually."
+        DB_USERNAME : ${{ secrets.DB_USERNAME }}
+        DB_PASSWORD : ${{ secrets.DB_PASSWORD }}
