--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,7 +79,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y docker-compose
 
-    - name: Deploy to Docker (Init or Feature)
+    - name: Deploy to Docker Hub
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker-compose -f docker-compose.yml build
