--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,4 +96,5 @@ jobs:
         DB_URL: ${{ secrets.DB_URL }}
         DB_USERNAME : ${{ secrets.DB_USERNAME }}
         DB_PASSWORD : ${{ secrets.DB_PASSWORD }}
+        CORS_ORIGIN: ${{ secrets.CORS_ORIGIN }}
     
