--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,11 +67,17 @@ jobs:
         npm test
 
   
-  deploy-docker:
+  deploy:
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
+
+    - name: Install Docker Compose
+      run: |
+        mkdir -p ~/.docker/cli-plugins/
+        curl -SL "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o ~/.docker/cli-plugins/docker-compose
+        chmod +x ~/.docker/cli-plugins/docker-compose
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -82,53 +88,61 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Determine current environment
+    - name: Determine deployment environment
+      id: deployment
       run: |
         CURRENT_ENV=$([ -f current_env.txt ] && cat current_env.txt || echo "blue")
         NEXT_ENV=$([[ $CURRENT_ENV == "blue" ]] && echo "green" || echo "blue")
-        echo "CURRENT_ENV=$CURRENT_ENV" >> $GITHUB_ENV
-        echo "NEXT_ENV=$NEXT_ENV" >> $GITHUB_ENV
+        echo "current_env=$CURRENT_ENV" >> $GITHUB_OUTPUT
+        echo "next_env=$NEXT_ENV" >> $GITHUB_OUTPUT
 
     - name: Build and push Docker images
+      env:
+        NEXT_ENV: ${{ steps.deployment.outputs.next_env }}
       run: |
-        docker compose -f docker-compose.${NEXT_ENV}.yml build
-        docker compose -f docker-compose.${NEXT_ENV}.yml push
+        docker compose -f docker-compose.$NEXT_ENV.yml build
+        docker compose -f docker-compose.$NEXT_ENV.yml push
 
-    - name: Deploy the next environment
+    - name: Deploy to server
+      env:
+        NEXT_ENV: ${{ steps.deployment.outputs.next_env }}
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
       run: |
-        docker compose -f docker-compose.${NEXT_ENV}.yml up -d
-        if [ $? -eq 0 ]; then
-          echo "Deployment of $NEXT_ENV was successful."
-          echo "$NEXT_ENV" > current_env.txt
-        else
-          echo "Deployment failed. Keeping the current environment as $CURRENT_ENV."
-          echo "$CURRENT_ENV" > current_env.txt
-        fi
+        echo "DB_USER=$DB_USER" >> .env
+        echo "DB_PASSWORD=$DB_PASSWORD" >> .env
+        echo "MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD" >> .env
+        docker compose -f docker-compose.$NEXT_ENV.yml up -d
 
-    - name: Upload environment artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: current-env
-        path: current_env.txt
-
-  post-deploy:
-    needs: deploy-docker
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Download current environment artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: current-env
-
-    - name: Read current environment and perform health check
+    - name: Health check
+      env:
+        NEXT_ENV: ${{ steps.deployment.outputs.next_env }}
       run: |
-        CURRENT_ENV=$(cat current_env.txt)
-        echo "Current environment is: $CURRENT_ENV"
-        echo "CURRENT_ENV=$CURRENT_ENV" >> $GITHUB_ENV
+        # Wait for services to be up
+        sleep 30
+        # Check frontend
+        curl -f http://localhost:80 || exit 1
+        # Check backend
+        curl -f http://localhost:8080/actuator/health || exit 1
+
+    - name: Update current environment
+      if: success()
+      env:
+        NEXT_ENV: ${{ steps.deployment.outputs.next_env }}
+      run: |
+        echo $NEXT_ENV > current_env.txt
+
+    - name: Rollback on failure
+      if: failure()
+      env:
+        CURRENT_ENV: ${{ steps.deployment.outputs.current_env }}
+      run: |
+        docker compose -f docker-compose.$CURRENT_ENV.yml up -d
 
     - name: Clean up old environment
+      if: success()
+      env:
+        CURRENT_ENV: ${{ steps.deployment.outputs.current_env }}
       run: |
-        OLD_ENV=$([[ $CURRENT_ENV == "blue" ]] && echo "green" || echo "blue")
-        docker-compose -f docker-compose.${OLD_ENV}.yml down
+        docker compose -f docker-compose.$CURRENT_ENV.yml down
