--- a/nginx.conf
+++ b/nginx.conf
@@ -8,12 +8,12 @@ http {
 
     upstream frontend {
         server frontend-blue:80;
-
+        server frontend-green:80 backup;
     }
 
     upstream backend {
         server backend-blue:8080;
-
+        server backend-green:8080 backup;
     }
 
     gzip on;
@@ -34,8 +34,6 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            health_check interval=5s fails=3 passes=2;
         }
 
         # Backend proxy
@@ -49,9 +47,6 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            health_check interval=5s fails=3 passes=2;
         }
     }
 }
-
