--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline with Nginx Load Balancer
 
 on:
   push:
@@ -8,65 +8,10 @@ on:
 
 jobs:
   build-and-test:
+    # Keep your existing build-and-test job as is
     runs-on: ubuntu-latest
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: '0'
-          MYSQL_DATABASE: todo_list
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+    # ... (your existing build-and-test steps)
 
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Cache Maven dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'adopt'
-
-    - name: Build and test backend
-      run: |
-        cd todo-backend
-        mvn clean install
-        mvn test
-      env:
-        SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/todo_list?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-        SPRING_DATASOURCE_USERNAME: root
-        SPRING_DATASOURCE_PASSWORD: '0'
-
-    - name: Cache Node.js modules
-      uses: actions/cache@v4
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/todo-frontend/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-
-    - name: Build and test frontend
-      run: |
-        cd todo-frontend
-        npm install
-        npm run build
-        npm test
-
-  
   deploy:
     needs: build-and-test
     runs-on: ubuntu-latest
@@ -119,14 +64,21 @@ jobs:
         # Start the new environment
         docker compose -f docker-compose.$NEXT_ENV.yml up -d
         
+        # Wait for Nginx container to be ready
+        echo "Waiting for Nginx container to be ready..."
+        timeout 60s bash -c 'until docker compose -f docker-compose.${{ steps.deployment.outputs.next_env }}.yml exec -T nginx nginx -t &> /dev/null; do sleep 1; done'
+        
         # Update Nginx configuration
         sed -i 's/server frontend-'$CURRENT_ENV':80;/server frontend-'$CURRENT_ENV':80 backup;/' nginx.conf
         sed -i 's/server frontend-'$NEXT_ENV':80 backup;/server frontend-'$NEXT_ENV':80;/' nginx.conf
         sed -i 's/server backend-'$CURRENT_ENV':8080;/server backend-'$CURRENT_ENV':8080 backup;/' nginx.conf
         sed -i 's/server backend-'$NEXT_ENV':8080 backup;/server backend-'$NEXT_ENV':8080;/' nginx.conf
         
+        # Copy updated nginx.conf to the container
+        docker compose -f docker-compose.$NEXT_ENV.yml cp nginx.conf nginx:/etc/nginx/nginx.conf
+        
         # Reload Nginx configuration
-        docker exec nginx nginx -s reload
+        docker compose -f docker-compose.$NEXT_ENV.yml exec -T nginx nginx -s reload
 
     - name: Update current environment
       if: success()
@@ -143,14 +95,21 @@ jobs:
       run: |
         docker compose -f docker-compose.$CURRENT_ENV.yml up -d
         
+        # Wait for Nginx container to be ready
+        echo "Waiting for Nginx container to be ready..."
+        timeout 60s bash -c 'until docker compose -f docker-compose.${{ steps.deployment.outputs.current_env }}.yml exec -T nginx nginx -t &> /dev/null; do sleep 1; done'
+        
         # Revert Nginx configuration
         sed -i 's/server frontend-'$CURRENT_ENV':80 backup;/server frontend-'$CURRENT_ENV':80;/' nginx.conf
         sed -i 's/server frontend-'$NEXT_ENV':80;/server frontend-'$NEXT_ENV':80 backup;/' nginx.conf
         sed -i 's/server backend-'$CURRENT_ENV':8080 backup;/server backend-'$CURRENT_ENV':8080;/' nginx.conf
         sed -i 's/server backend-'$NEXT_ENV':80;/server backend-'$NEXT_ENV':80 backup;/' nginx.conf
         
+        # Copy updated nginx.conf to the container
+        docker compose -f docker-compose.$CURRENT_ENV.yml cp nginx.conf nginx:/etc/nginx/nginx.conf
+        
         # Reload Nginx configuration
-        docker exec nginx nginx -s reload
+        docker compose -f docker-compose.$CURRENT_ENV.yml exec -T nginx nginx -s reload
 
     - name: Clean up old environment
       if: success()
