--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline with Nginx Load Balancer
+name: CI/CD Pipeline
 
 on:
   push:
@@ -8,15 +8,70 @@ on:
 
 jobs:
   build-and-test:
-    # Keep your existing build-and-test job as is
     runs-on: ubuntu-latest
-    # ... (your existing build-and-test steps)
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: '0'
+          MYSQL_DATABASE: todo_list
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Cache Maven dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'adopt'
+
+    - name: Build and test backend
+      run: |
+        cd todo-backend
+        mvn clean install
+        mvn test
+      env:
+        SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/todo_list?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+        SPRING_DATASOURCE_USERNAME: root
+        SPRING_DATASOURCE_PASSWORD: '0'
+
+    - name: Cache Node.js modules
+      uses: actions/cache@v4
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/todo-frontend/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+
+    - name: Build and test frontend
+      run: |
+        cd todo-frontend
+        npm install
+        npm run build
+        npm test
+
+  
   deploy:
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Install Docker Compose
       run: |
@@ -117,4 +172,3 @@ jobs:
         CURRENT_ENV: ${{ steps.deployment.outputs.current_env }}
       run: |
         docker compose -f docker-compose.$CURRENT_ENV.yml down
-
