--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,13 +108,13 @@ jobs:
       env:
         NEXT_ENV: ${{ steps.deployment.outputs.next_env }}
         CURRENT_ENV: ${{ steps.deployment.outputs.current_env }}
-        DB_USER: ${{ secrets.DB_USER }}
-        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+        DB_USER: root
+        DB_PASSWORD: '0'
+        MYSQL_ROOT_PASSWORD: '0'
       run: |
-        echo "DB_USER=$DB_USER" >> .env
-        echo "DB_PASSWORD=$DB_PASSWORD" >> .env
-        echo "MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD" >> .env
+        # echo "DB_USER=$DB_USER" >> .env
+        # echo "DB_PASSWORD=$DB_PASSWORD" >> .env
+        # echo "MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD" >> .env
         
         # Start the new environment
         docker compose -f docker-compose.$NEXT_ENV.yml up -d
