--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,6 @@ jobs:
         npm run build
         npm test
 
-  
   deploy:
     needs: build-and-test
     runs-on: ubuntu-latest
@@ -108,23 +107,30 @@ jobs:
       env:
         NEXT_ENV: ${{ steps.deployment.outputs.next_env }}
         CURRENT_ENV: ${{ steps.deployment.outputs.current_env }}
-        DB_USER: root
-        DB_PASSWORD: '0'
-        MYSQL_ROOT_PASSWORD: '0'
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
       run: |
+        echo "DB_USER=$DB_USER" >> .env
+        echo "DB_PASSWORD=$DB_PASSWORD" >> .env
+        echo "MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD" >> .env
         
+        # Start the new environment
         docker compose -f docker-compose.$NEXT_ENV.yml up -d
         
-        echo "Waiting for Nginx container to be ready..."
-        timeout 60s bash -c 'until docker compose -f docker-compose.${{ steps.deployment.outputs.next_env }}.yml exec -T nginx nginx -t &> /dev/null; do sleep 1; done'
+        # Wait for all services in the new environment to be healthy
+        timeout 120s bash -c 'until docker compose -f docker-compose.$NEXT_ENV.yml ps | grep -q healthy; do sleep 2; done'
+
+        # Update Nginx configuration
+        sed -i 's/server frontend-$CURRENT_ENV:80;/server frontend-$CURRENT_ENV:80 backup;/' nginx.conf
+        sed -i 's/server frontend-$NEXT_ENV:80 backup;/server frontend-$NEXT_ENV:80;/' nginx.conf
+        sed -i 's/server backend-$CURRENT_ENV:8080;/server backend-$CURRENT_ENV:8080 backup;/' nginx.conf
+        sed -i 's/server backend-$NEXT_ENV:8080 backup;/server backend-$NEXT_ENV:8080;/' nginx.conf
         
-        sed -i 's/server frontend-'$CURRENT_ENV':80;/server frontend-'$CURRENT_ENV':80 backup;/' nginx.conf
-        sed -i 's/server frontend-'$NEXT_ENV':80 backup;/server frontend-'$NEXT_ENV':80;/' nginx.conf
-        sed -i 's/server backend-'$CURRENT_ENV':8080;/server backend-'$CURRENT_ENV':8080 backup;/' nginx.conf
-        sed -i 's/server backend-'$NEXT_ENV':8080 backup;/server backend-'$NEXT_ENV':8080;/' nginx.conf
-        
+        # Copy updated nginx.conf to the container
         docker compose -f docker-compose.$NEXT_ENV.yml cp nginx.conf nginx:/etc/nginx/nginx.conf
         
+        # Reload Nginx configuration
         docker compose -f docker-compose.$NEXT_ENV.yml exec -T nginx nginx -s reload
 
     - name: Update current environment
@@ -142,16 +148,19 @@ jobs:
       run: |
         docker compose -f docker-compose.$CURRENT_ENV.yml up -d
         
-        echo "Waiting for Nginx container to be ready..."
-        timeout 60s bash -c 'until docker compose -f docker-compose.${{ steps.deployment.outputs.current_env }}.yml exec -T nginx nginx -t &> /dev/null; do sleep 1; done'
+        # Wait for Nginx container to be ready
+        timeout 120s bash -c 'until docker compose -f docker-compose.$CURRENT_ENV.yml ps | grep -q healthy; do sleep 2; done'
         
-        sed -i 's/server frontend-'$CURRENT_ENV':80 backup;/server frontend-'$CURRENT_ENV':80;/' nginx.conf
-        sed -i 's/server frontend-'$NEXT_ENV':80;/server frontend-'$NEXT_ENV':80 backup;/' nginx.conf
-        sed -i 's/server backend-'$CURRENT_ENV':8080 backup;/server backend-'$CURRENT_ENV':8080;/' nginx.conf
-        sed -i 's/server backend-'$NEXT_ENV':80;/server backend-'$NEXT_ENV':80 backup;/' nginx.conf
+        # Revert Nginx configuration
+        sed -i 's/server frontend-$CURRENT_ENV:80 backup;/server frontend-$CURRENT_ENV:80;/' nginx.conf
+        sed -i 's/server frontend-$NEXT_ENV:80;/server frontend-$NEXT_ENV:80 backup;/' nginx.conf
+        sed -i 's/server backend-$CURRENT_ENV:8080 backup;/server backend-$CURRENT_ENV:8080;/' nginx.conf
+        sed -i 's/server backend-$NEXT_ENV:8080;/server backend-$NEXT_ENV:8080 backup;/' nginx.conf
         
+        # Copy updated nginx.conf to the container
         docker compose -f docker-compose.$CURRENT_ENV.yml cp nginx.conf nginx:/etc/nginx/nginx.conf
         
+        # Reload Nginx configuration
         docker compose -f docker-compose.$CURRENT_ENV.yml exec -T nginx nginx -s reload
 
     - name: Clean up old environment
