--- a/nginx.conf
+++ b/nginx.conf
@@ -7,13 +7,11 @@ http {
     default_type  application/octet-stream;
 
     upstream frontend {
-        server frontend-blue:80;
-        server frontend-green:80 backup;
+        server frontend-${CURRENT_ENV}:80;
     }
 
     upstream backend {
-        server backend-blue:8080;
-        server backend-green:8080 backup;
+        server backend-${CURRENT_ENV}:8080;
     }
 
     gzip on;
@@ -50,4 +48,3 @@ http {
         }
     }
 }
-
