--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -48,6 +48,7 @@
     }
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "typescript": "^4.9.5"
   }
 }
