--- a/docker-compose.blue.yml
+++ b/docker-compose.blue.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf /etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - frontend-blue
       - backend-blue
