--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -7,6 +7,8 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     environment:
       - CURRENT_ENV=green
+    entrypoint: >
+      sh -c " sed -i 's/\${CURRENT_ENV}/$CURRENT_ENV/g' /etc/nginx/nginx.conf && nginx -g 'daemon off;' "
     depends_on:
       - frontend-green
       - backend-green
@@ -35,7 +37,7 @@ services:
       - db
 
   db:
-    image: mysql:latest
+    image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-0}
       MYSQL_DATABASE: todo_list
