--- a/docker-compose.blue.yml
+++ b/docker-compose.blue.yml
@@ -6,9 +6,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     environment:
-      - CURRENT_ENV=blue
-    entrypoint: >
-      sh -c " sed -i 's/\${CURRENT_ENV}/$CURRENT_ENV/g' /etc/nginx/nginx.conf && nginx -g 'daemon off;' "
+      - CURRENT_ENV="blue"
     depends_on:
       - frontend-blue
       - backend-blue
