--- a/nginx.conf
+++ b/nginx.conf
@@ -7,11 +7,11 @@ http {
     default_type  application/octet-stream;
 
     upstream frontend {
-        server frontend-${CURRENT_ENV}:80;
+        server frontend-$CURRENT_ENV:80;
     }
 
     upstream backend {
-        server backend-${CURRENT_ENV}:8080;
+        server backend-$CURRENT_ENV:8080;
     }
 
     gzip on;
