--- a/nginx.conf
+++ b/nginx.conf
@@ -8,10 +8,12 @@ http {
 
     upstream frontend {
         server frontend-$CURRENT_ENV:80;
+        server frontend-$NEXT_ENV:80 backup;
     }
 
     upstream backend {
         server backend-$CURRENT_ENV:8080;
+        server backend-$NEXT_ENV:8080 backup; 
     }
 
     gzip on;
