--- a/todo-backend/src/main/resources/application.yaml
+++ b/todo-backend/src/main/resources/application.yaml
@@ -21,3 +21,13 @@ spring:
 server:
   port: 8080
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
+
+
