--- a/nginx.conf
+++ b/nginx.conf
@@ -7,13 +7,13 @@ http {
     default_type  application/octet-stream;
 
     upstream frontend {
-        server frontend-$CURRENT_ENV:3000;
-        server frontend-$NEXT_ENV:3000 backup;
+        server frontend-$CURRENT_ENV-1:3000;
+        server frontend-$NEXT_ENV-1:3000 backup;
     }
 
     upstream backend {
-        server backend-$CURRENT_ENV:8080;
-        server backend-$NEXT_ENV:8080 backup; 
+        server backend-$CURRENT_ENV-1:8080;
+        server backend-$NEXT_ENV-1:8080 backup; 
     }
 
     gzip on;
