--- a/docker-compose.green.yml
+++ b/docker-compose.green.yml
@@ -26,7 +26,7 @@ services:
     image: thanh2k4/todo_list-frontend:green
     user: root
     ports:
-      - "3000:3000"
+      - "3001:3000"
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:3000" ]
       interval: 30s
@@ -39,8 +39,8 @@ services:
       context: ./todo-backend
       dockerfile: Dockerfile
     image: thanh2k4/todo_list-backend:green
-    expose:
-      - "8080"
+    ports:
+      - "8081:8080"
     environment:
       DB_URL: ${DB_URL:-mysql://db:3306/todo_list}
       DB_USERNAME: ${MYSQL_USER:-root}
